[gd_scene load_steps=13 format=3 uid="uid://cs6vyhng0e7m"]

[ext_resource type="Script" path="res://enemies/crawling_enemy.gd" id="1_8cyhr"]
[ext_resource type="Texture2D" uid="uid://cweqkqqvmfdi" path="res://enemies/crawling_enemy.png" id="1_k7dtc"]
[ext_resource type="PackedScene" uid="uid://dlwimfo5hvpjb" path="res://collisions/hurtbox.tscn" id="2_sl65k"]
[ext_resource type="PackedScene" uid="uid://crw0gnpqes70e" path="res://collisions/hitbox.tscn" id="3_ylsaa"]
[ext_resource type="PackedScene" uid="uid://behqgs0emmug1" path="res://stats.tscn" id="5_2fmjm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_86nv1"]
atlas = ExtResource("1_k7dtc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ght"]
atlas = ExtResource("1_k7dtc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp4ie"]
atlas = ExtResource("1_k7dtc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwg24"]
atlas = ExtResource("1_k7dtc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8oh4o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86nv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ght")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp4ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwg24")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t4i8g"]
radius = 2.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gem8x"]
size = Vector2(8, 5)

[node name="CrawlingEnemy" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_8cyhr")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_8oh4o")
autoplay = "default"
frame_progress = 0.182074

[node name="Hurtbox" parent="." instance=ExtResource("2_sl65k")]
position = Vector2(0, -8)
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t4i8g")

[node name="Hitbox" parent="." instance=ExtResource("3_ylsaa")]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_gem8x")
debug_color = Color(0.959936, 0.201766, 0, 0.42)

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(2.08165e-12, 8)

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(4, 2.08165e-12)

[node name="Stats" parent="." instance=ExtResource("5_2fmjm")]

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
